# kelkaj-pasvortoj

./: Cargo.toml  README.md
backend/: .env  Cargo.toml  docker-compose.yml
backend/migrations/: 20240105151129_invites.sql  20240105151212_users.sql  20240105151302_user_vaults.sql  20240106183409_sessions.sql
backend/src/: main.rs  models.rs
backend/src/api/: login.rs  mod.rs  registration.rs  rpc.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/persistence/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  rpc.rs  utils.rs
shared/src/crypto/: hashing.rs  mod.rs
shared/src/derivation/: mod.rs
shared/src/flows/: mod.rs
shared/src/primitives/: mod.rs
