[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.11", features = [ "derive" ]}
pkcs1 = "0.7.5"
reqwest = {version="0.11.23", features=["json"]}
serde = "1.0.193"
serde_json = "1.0.108"
shared = { path = "../shared" }
tokio = {version="1.35.1",features=["full"]}
