[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.21.5"
hex = "0.4.3"
hkdf = "0.12.4"
num-bigint = "0.4.4"
pbkdf2 = "0.12.2"
rand = "0.8.5"
rsa = "0.9.6"
serde = {version="1.0.193",features=["derive"]}
serde_json = "1.0.108"
sha2 = "0.10.8"
srp = "0.6.0"
unicode-normalization = "0.1.22"


[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",
]
